fix(ZNTA-2307) WIP: tidy up alignment of translation filter toggle buttons as much as possible in editor

--- a/server/zanata-frontend/src/frontend/app/editor/components/FilterToggle/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/components/FilterToggle/index.css
@@ -79,3 +79,22 @@ not conflict with the other frontend code
 .Toggle.is-active:hover > .Toggle-fakeCheckbox {
   opacity: 0.8;
 }
+
+nav.flex-wrapper .Toggle-fakeCheckbox {
+  padding-bottom: 1rem;
+}
+
+
+nav.flex-wrapper  .Toggle-fakeCheckbox {
+  padding-bottom: 1rem;
+  padding-right: 0.7rem;
+
+}
+
+nav.flex-wrapper  label.Toggle-label {
+  margin-top: 0.1375rem;
+}
+
+nav.flex-wrapper  label.Toggle-label:first-of-type {
+  margin-left: 0.375rem;
+}
